--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
 <img src="assets/images/csdm.png" alt="School of Computing Logo">
 
 <h2>Project Ethical Approval System</h2>
-<h3 style="color:blue;">Please login for access</h3>
+<h3 style="color:red;">Please login for access</h3>
 
 <form>
-    User name:<br>
-    <input type="text" name="username"><br>
-    User password:<br>
-    <input type="password" name="psw">
+
+    <centre>
+
+    <br>  Username:  <input type="text" name="username"></br>
+    <br>  Password:    <input type="password" name="psw"></br>
 
     <input type="submit" value="Submit">
+
+
+    </centre>
 
 </form>
 
