--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <img src="assets/images/csdm.png" alt="School of Computing Logo">
 
-<h2>Project Ethical Approval System</h2>
+<h2 style="color:blue;">  Ethical Approval of a Project</h2>
 <h3 style="color:red;">Please login for access</h3>
 
 <form>
